manifests/media-stack/prowlarr/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
