manifests/media-stack/prowlarr/prowlarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingressroute
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prowlarr.janikhenz.ch`)
      kind: Rule
      services:
        - name: prowlarr-service
          port: 9696
